--- a/src/app.css
+++ b/src/app.css
@@ -3,19 +3,22 @@
 :root {
 	--color-bg-over: #06014066;
 	--color-2e2e2e: #2e2e2e;
+	--font-lato: 'Lato', sans-serif;
+	--font-audiowide: 'Audiowide', sans-serif;
 }
 
 @layer base {
 	svg {
-		max-width: 100%;
+		width: 100%;
+		height: 100%;
 	}
 
 	.font-lato {
-		font-family: 'Lato', sans-serif;
+		font-family: var(--font-lato);
 	}
 
 	.font-audiowide {
-		font-family: 'Audiowide', sans-serif;
+		font-family: var(--font-audiowide);
 	}
 }
 
@@ -34,9 +37,19 @@
 
 	.bg-menu-hookah-icon {
 		background: url('/menu-hookah-icon.svg') no-repeat center top 50px;
+		@apply max-lg:bg-contain
 	}
 
 	.rotate {
 		transform: rotate(90deg);
+	}
+
+	.bg-modal {
+		background-color: #000000cc;
+	}
+
+	.main-title {
+		@apply text-5xl uppercase font-extrabold mb-13 text-center max-md:text-4xl max-md:mb-10 max-sm:text-3xl;
+		font-family: var(--font-audiowide);
 	}
 }
