--- a/src/app.css
+++ b/src/app.css
@@ -45,12 +45,16 @@
 		transform: rotate(90deg);
 	}
 
-	.bg-modal {
-		background-color: #000000cc;
+	.bg-modal::backdrop {
+		background-color: var(--backdrop-modal);
 	}
 
 	.main-title {
 		@apply text-5xl uppercase font-extrabold mb-13 text-center max-md:text-4xl max-md:mb-10 max-sm:text-3xl;
 		font-family: var(--font-audiowide);
+	}
+
+	.scrollbar-width {
+		scrollbar-width: none;
 	}
 }
